k8s/prod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hangeul-chat-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: backend-service
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx
  rules:
    - host: hanguelchat.link  
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: www.hanguelchat.link
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    # EKS로 전환한 뒤 원인 불명으로 whitelist가 정상 동작하지 않아 임시 주석 처리
    # nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.56.1/32,192.168.187.1/32,192.168.111.1/32,218.50.37.15/32"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: hanguelchat.link
      http:
        paths:
          - path: /argoCD
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
    - host: www.hanguelchat.link
      http:
        paths:
          - path: /argoCD
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
